--- a/demo/grid.css
+++ b/demo/grid.css
@@ -1,19 +1,9 @@
-/*
-
-Grid
-A simple responsive grid.
-
-by Kevin Tan
-
-*/
-
 .grid { 
 	max-width: 1000px;
 	margin: 0 auto;
 	overflow: auto;
 }
 
-/* Rows */
 .row { 
 	width: 100%; 
 	overflow: auto;
@@ -27,7 +17,6 @@ by Kevin Tan
 	overflow: auto;
 }
 
-/* Columns */
 .col-10  { width: 10%;  }
 .col-20  { width: 20%;  }
 .col-30  { width: 30%;  }
@@ -39,7 +28,13 @@ by Kevin Tan
 .col-90  { width: 90%;  }
 .col-100 { width: 100%; }
 
-/* Content */
+/* Gutter */
 .content {
-	margin: 10px; /* Adjusts the guttter. */
+	margin: 10px;
+}
+
+/* Styles of Testing Purposes */
+.content { 
+	background-color: gray;
+	height: 10px;
 }
