--- a/grid.css
+++ b/grid.css
@@ -1,19 +1,9 @@
-/*
-
-Grid
-A simple responsive grid.
-
-by Kevin Tan
-
-*/
-
 .grid { 
 	max-width: 1000px;
 	margin: 0 auto;
 	overflow: auto;
 }
 
-/* Rows */
 .row { 
 	width: 100%; 
 	overflow: auto;
@@ -27,19 +17,38 @@ by Kevin Tan
 	overflow: auto;
 }
 
-/* Columns */
-.col-10  { width: 10%;  }
-.col-20  { width: 20%;  }
-.col-30  { width: 30%;  }
-.col-40  { width: 40%;  }
-.col-50  { width: 50%;  }
-.col-60  { width: 60%;  }
-.col-70  { width: 70%;  }
-.col-80  { width: 80%;  }
-.col-90  { width: 90%;  }
-.col-100 { width: 100%; }
+.col-10-100  { width: 10%;  }
+.col-15-100  { width: 15%;  }
+.col-20-100  { width: 20%;  }
+.col-25-100  { width: 25%;  }
+.col-30-100  { width: 30%;  }
+.col-35-100  { width: 35%;  }
+.col-40-100  { width: 40%;  }
+.col-45-100  { width: 45%;  }
+.col-50-100  { width: 50%;  }
+.col-55-100  { width: 55%;  }
+.col-60-100  { width: 60%;  }
+.col-65-100  { width: 65%;  }
+.col-70-100  { width: 70%;  }
+.col-75-100  { width: 75%;  }
+.col-80-100  { width: 80%;  }
+.col-85-100  { width: 85%;  }
+.col-90-100  { width: 90%;  }
+.col-95-100  { width: 95%;  }
+.col-100-100 { width: 100%; }
 
-/* Content */
+/* Thirds */
+.col-1-3 { width: 33.333%; }
+.col-2-3 { width: 66.666%; }
+
+/* Sixths */
+.col-1-6 { width: 16.666%; }
+.col-2-6 { width: 33.333%; }
+.col-3-6 { width: 50%;     }
+.col-4-6 { width: 66.666%; }
+.col-5-6 { width: 83.333%; }
+
+/* Gutter */
 .content {
-	margin: 10px; /* Adjusts the guttter. */
+	margin: 10px;
 }
